Fixing the scrollbar

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -38,8 +38,12 @@ h1 {
     transition: opacity 150ms ease-in;
     overflow-x: hidden;
     overflow-y: auto;
-    scrollbar-color: rgba(255, 255, 255, 0.4) rgba(0, 0, 0, 0.2);
-    scrollbar-width: thin;
+      -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
+}
+
+#tileContainer::-webkit-scrollbar {
+  display: none;
 }
 
 .container {
